# gtext

./: .gitignore  CMakeLists.txt
cmake/: thirdparty.cmake
include/: base.h  config.h  gtext.h  textlayout.h
include/base/: bitmap.h  point.h  size.h
src/: CMakeLists.txt  gtext.cpp  layout.cpp  layout.h  textlayout.cpp
src/base/: bitmap.cpp
tests/: CMakeLists.txt  main.cpp
